--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,21 +1,16 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 0;
 }
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  padding: 0 0;
 }
 
 .footer {
   display: flex;
   flex: 1;
-  padding: 2rem 0;
+  padding: 0 0;
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
